--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^6.8.0",
     "gatsby-plugin-eslint": "^2.0.8",
     "prettier": "^1.19.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "keywords": [
