--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "gatsby-plugin-eslint": "^2.0.8",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
